--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,18 +1,10 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: ask4physics # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
+  - name: MDIS OPAC
+    url: https://mdis.spydus.com.sg
     port: 80
     check: "tcp-ping"
     ipv6: true
