--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: ask4physics # Your GitHub organization or username, where this repository
 repo: uptime # The name of this repository
 
 sites:
-  - name: MDIS OPAC.
+  - name: MDIS OPAC
     url: https://mdis.spydus.com.sg/
 
 status-website:
