--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: ask4physics # Your GitHub organization or username, where this repository lives
-repo: uptime # The name of this repository
+repo: upptime # The name of this repository
 
 sites:
   - name: MDIS OPAC
