--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,14 @@ owner: ask4physics # Your GitHub organization or username, where this repository
 repo: upptime # The name of this repository
 
 sites:
-  - name: MDIS OPAC
-    url: https://mdis.spydus.com.sg/
+  - name: MDIS website
+    url: https://mdis.edu.sg/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
-  baseUrl: /uptime
+  baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
